# jromp-examples

./: .editorconfig  .gitignore  CMakeLists.txt  pom.xml
src/main/c/jromp/examples/: basic_usage.c  parallel_for_base.c  pi_calculation_with_reduction.c  sections.c
src/main/java/jromp/examples/: BasicUsage.java  ParallelForBase.java  PiCalculationWithReduction.java  Sections.java
